@@ -1,3 +1,8 @@
+2013-02-19  Kai Tietz  <ktietz@redhat.com>
+
+	* windows-nat.c (windows_xfer_memory): Fix debug-output
+	for LLP64.
+
 2013-02-19  Lei Liu  <lei.liu2@windriver.com>
 
 	* mips-linux-nat.c (mips64_linux_regsets_store_registers):
